--- a/.github/workflows/deploy surge.yml
+++ b/.github/workflows/deploy surge.yml
@@ -29,4 +29,4 @@ jobs:
       name: npm install -g surge
       
       name: Run Surge
-      run: surge ./bootcamp newapp.surge.sh --tokken ${{secret.SURGE_TOKEN}}
+      run: surge ./bootcamp newapp.surge.sh --tokken ${{secrets.SURGE_TOKEN}}
